small fixes in about section on mobile devices and fix for new font

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,14 +13,14 @@
 
 @font-face {
     font-family: 'Switzer';
-    src: url('/font/Switzer-ExtraBold.otf') format('opentype');
+    src: url('/font/Switzer-Extrabold.otf') format('opentype');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Switzer';
-    src: url('/font/Switzer-ExtraLight.otf') format('opentype');
+    src: url('/font/Switzer-Extralight.otf') format('opentype');
     font-weight: 200;
     font-style: normal;
 }
@@ -48,7 +48,7 @@
 
 @font-face {
     font-family: 'Switzer';
-    src: url('/font/Switzer-SemiBold.otf') format('opentype');
+    src: url('/font/Switzer-Semibold.otf') format('opentype');
     font-weight: 600;
     font-style: normal;
 }
